Work on web app and slight tweaks to motor class

--- a/RaspiSoftware/WebApp/templates/index.jinja2
+++ b/RaspiSoftware/WebApp/templates/index.jinja2
@@ -3,6 +3,7 @@
         <div>
             <h2>Serial Send</h2>
             <form method="POST" action="/">
+                {{ form.csrf_token }}
                 <div>{{ form.json.label }} {{ form.json(size=20) }}</div>
                 {{ form.submit }}
             </form>
