--- a/RaspiSoftware/WebApp/templates/layout.jinja2
+++ b/RaspiSoftware/WebApp/templates/layout.jinja2
@@ -11,6 +11,25 @@
         <!-- Link to Relevant Styles -->
         {% block styles %}{% endblock %}
 
+        <!-- Websocket set up -->
+        <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js" integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I=" crossorigin="anonymous"></script>
+        <script type="text/javascript" charset="utf-8">
+        var socket = io('http://localhost:5000');
+        
+        // var socket = io.connect('http://' + document.domain + ':' + location.port);
+    
+        //verify our websocket connection is established
+        socket.on('connect', function() {
+            console.log('Websocket connected!');
+        });
+    
+        //reload page when socket broadcasts new incoming
+        socket.on('new incoming', function(msg) {
+            window.location.reload(); 
+        });
+    
+        </script>
+        
         <title>PRS Cable Bot</title>
     </head>
     <body>
