--- a/RaspiSoftware/WebApp/templates/layout.jinja2
+++ b/RaspiSoftware/WebApp/templates/layout.jinja2
@@ -14,22 +14,10 @@
         <!-- Websocket set up -->
         <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js" integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I=" crossorigin="anonymous"></script>
         <script type="text/javascript" charset="utf-8">
-        var socket = io('http://localhost:5000');
+        var socket = io();
         
-        // var socket = io.connect('http://' + document.domain + ':' + location.port);
-    
-        //verify our websocket connection is established
-        socket.on('connect', function() {
-            console.log('Websocket connected!');
-        });
-    
-        //reload page when socket broadcasts new incoming
-        socket.on('new incoming', function(msg) {
-            window.location.reload(); 
-        });
-    
         </script>
-        
+
         <title>PRS Cable Bot</title>
     </head>
     <body>
@@ -37,7 +25,28 @@
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-        
+        <!-- Set up Websocket on client -->
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+        <script type="text/javascript" charset="utf-8">
+            var socket = io.connect('http://' + document.domain + ':' + location.port);
+            // verify our websocket connection is established
+            socket.on('connect', function(){
+                console.log('Websocket connected!');
+            });
+            
+            // Detect whether there is a incoming message and reloads page.
+            socket.on('new incoming', namespace='/test', function(){
+                console.log('New incoming detected, refreshing page');
+                location.reload();
+            });
+      
+            // // stop  on click
+            // function stop() {
+            //   console.log('Stopping...');
+            //   socket.emit('stop');
+            // }
+          </script>
+      
         <!-- Link to Relevant Content -->
         {% block content %}{% endblock %}
     </body>
