--- a/RaspiSoftware/WebApp/templates/serialMonitor.jinja2
+++ b/RaspiSoftware/WebApp/templates/serialMonitor.jinja2
@@ -6,7 +6,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
 <script type="text/javascript" charset="utf-8">
-    // Client side javascript.
     $(document).ready(function(){
         // Establish websocket connection and verify connection.
         var socket = io.connect('http://' + document.domain + ':' + location.port);
@@ -17,12 +16,66 @@
         socket.on('new incoming', function(json){
             console.log('New incoming detected, refreshing page');
             // $('incoming').text(json)
+            
+            // Reloads just the div with the incoming messages. 
             $("#incoming").load(location.href + " #incoming");
             
             // location.reload();
         });
     });
+</script>
 
+<button onclick="window.location.href='/';">
+    Refresh
+</button>
+
+<!-- Motor on/off toggle -->
+<input onclick="toggle_motor()" type="button" value="Enable Motor" id="motorStatus"></input>
+
+
+<label class="switch">
+    <input type="checkbox">
+    <span class="slider round"></span>
+</label>
+
+<!-- Create slider -->
+<div class="slidecontainer">
+    <!-- <input type="range" min="-1" max="1" value="0" step="0.1" class="slider" id="motorSpeed" onmouseup="send_motor_command()" ontouchend="send_motor_command()"> -->
+    <input type="range" min="-1" max="1" value="0" step="0.1" class="slider" id="motorSpeed" onchange="send_motor_command()">
+    <p>Value: <span id="demo"></span></p>
+</div>
+
+<script>
+    var slider = document.getElementById("motorSpeed");
+    var output = document.getElementById("demo");
+    output.innerHTML = slider.value; // Display the default slider value
+
+    // Update the current slider value (each time you drag the slider handle)
+    slider.oninput = function() {
+        output.innerHTML = this.value;
+        // socket.send('new outgoing command', {"id" : "Sensor1", "enabled" : "1", "speed": this.value} , json = True)
+    }
+
+    function send_motor_command(){
+        var elem = document.getElementById("motorSpeed");
+        var motor_speed_command = {"id" : "Motor1", "speed": elem.value}
+        console.log('Sending motor speed!');
+        socket.send('new outgoing', motor_speed_command , json = True);
+    }
+
+    function toggle_motor(){
+        var elem = document.getElementById("motorStatus");
+        if (elem.value=="Enable Motor"){
+            socket.emit('enable motor');
+            elem.value = "Disable Motor";
+        }
+        else{
+            socket.emit('disable motor');
+            elem.value = "Enable Motor";
+
+        } 
+        $("#outgoing").load(location.href + " #outgoing");
+    }
 
 </script>
 
@@ -45,8 +98,6 @@
     {{ incoming }}
     <!-- <div id="incoming"></div> -->
 </div>
-<button onclick="window.location.href='/';">
-    Refresh
-</button>
+
 {% endblock %}
 
