--- a/RaspiSoftware/WebApp/templates/serialMonitor.jinja2
+++ b/RaspiSoftware/WebApp/templates/serialMonitor.jinja2
@@ -2,53 +2,13 @@
 
 {% block content %}
 
-<!-- Set up Websocket on client -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
-<script type="text/javascript" charset="utf-8">
-    $(document).ready(function(){
-        // Sending a connect request to the server.
-        var socket = io.connect('http://' + document.domain + ':' + location.port);
-        //Verify that connection has been established
-        socket.on('connect', function(){
-            console.log('Websocket connected!');
-        });
-      
-        // Listens to "new incoming" message and updates incoming value.
-        socket.on('new incoming', function(data){
-            // console.log('New incoming detected, refreshing page');
-            // $('incoming').text(json)
-            
-            // Reloads just the div with the incoming messages. 
-            $("#incoming").load(location.href + " #incoming");
-            console.log("incoming message:", data.toString())
-        });
-    });
-</script>
-
-<button onclick="window.location.href='/';">
-    Refresh
-</button>
-
-<!-- Motor on/off toggle -->
-<input onclick="toggle_motor()" type="button" value="Enable Motor" id="motorStatus"></input>
-
-<!-- Create slider -->
-<div class="slidecontainer">
-    <!-- <input type="range" min="-1" max="1" value="0" step="0.1" class="slider" id="motorSpeed" onmouseup="send_motor_command()" ontouchend="send_motor_command()"> -->
-    <input type="range" min="-1" max="1" value="0" step="0.1" class="slider" id="motorSpeed" onchange="send_motor_speed()">
-    <p>Value: <span id="demo"></span></p>
-</div>
-
+<!-- Javascript for websocket functions -->
 <script>
-    var slider = document.getElementById("motorSpeed");
-    var output = document.getElementById("demo");
-    output.innerHTML = slider.value; // Display the default slider value
-
-    // Update the current slider value (each time you drag the slider handle)
-    slider.oninput = function() {
-        output.innerHTML = this.value;
-    }
+    // Listens to "new incoming" message and updates incoming value.
+    socket.on('new incoming', function(data){
+    console.log("incoming message:", data.toString())
+    document.getElementById("incoming").innerHTML = data.toString();
+    });                 
 
     function send_motor_speed(){
         var slider = document.getElementById("motorSpeed");
@@ -69,9 +29,37 @@
 
         } 
         $("#outgoing").load(location.href + " #outgoing");
-    }
-
+    }   
 </script>
+
+
+<div id="motorControl">
+    <h1>Motor Control</h1>
+    <!-- Motor on/off toggle -->
+    <input onclick="toggle_motor()" type="button" value="Enable Motor" id="motorStatus"></input>
+
+    <!-- Create slider -->
+    <div class="slidecontainer">
+        <!-- <input type="range" min="-1" max="1" value="0" step="0.1" class="slider" id="motorSpeed" onmouseup="send_motor_command()" ontouchend="send_motor_command()"> -->
+        <input type="range" min="-1" max="1" value="0" step="0.1" class="slider" id="motorSpeed" onchange="send_motor_speed()">
+        <p>Value: <span id="display"></span></p>
+    </div>
+
+    <script>
+        var slider = document.getElementById("motorSpeed");
+        var output = document.getElementById("display");
+        output.innerHTML = slider.value;
+
+        // Displays the current slider value hw
+        slider.oninput = function() {
+            output.innerHTML = this.value;
+        }
+    </script>
+</div>
+
+<button onclick="window.location.href='/';">
+    Refresh
+</button>
 
 <div>
     <h2>Serial Send</h2>
@@ -87,11 +75,14 @@
     {{ outgoing }}
 </div>
 
-<div id="incoming">
+<div>
     <h2>Incoming</h2>
-    {{ incoming }}
-    <!-- <div id="incoming"></div> -->
+    <!-- {{ incoming }} -->
+    <div  id="incoming"> </div>
+
 </div>
+
+
 
 {% endblock %}
 
