Added motor code to test why it's spamming the terminal

--- a/RaspiSoftware/WebApp/templates/serialMonitor.jinja2
+++ b/RaspiSoftware/WebApp/templates/serialMonitor.jinja2
@@ -15,6 +15,7 @@
         // var motor_speed = {speed : slider.value};
         console.log('Sending motor speed!');
         socket.emit('new motor speed', slider.value);
+        $("#outgoing").load(location.href + " #outgoing");
     }
 
     function toggle_motor(){
