started implementing google charts to visualize data.

--- a/RaspiSoftware/WebApp/templates/serialMonitor.jinja2
+++ b/RaspiSoftware/WebApp/templates/serialMonitor.jinja2
@@ -49,6 +49,10 @@
     </tr>
 </table>
 
+<table class = "table" id="sqlTable">
+</table>
+
 <script type="text/javascript" src="{{url_for('static', filename='javascript/socket.js')}}"></script>
+<script type="text/javascript" src="{{url_for('static', filename='javascript/visualization.js')}}"></script>
 
 {% endblock %}
