successfully implemented table that updates directly from the database

--- a/RaspiSoftware/WebApp/templates/serialMonitor.jinja2
+++ b/RaspiSoftware/WebApp/templates/serialMonitor.jinja2
@@ -51,6 +51,12 @@
 
 <table class = "table" id="sqlTable">
 </table>
+<!-- <div id="sql_emit_tester"></div>
+<script>
+socket.on('update table', function(){
+    console.log('received update table in serialmonitor.jinja!');
+});
+</script> -->
 
 <script type="text/javascript" src="{{url_for('static', filename='javascript/socket.js')}}"></script>
 <script type="text/javascript" src="{{url_for('static', filename='javascript/visualization.js')}}"></script>
