deleted extra code and renamed socket.js to controls.js

--- a/RaspiSoftware/WebApp/templates/serialMonitor.jinja2
+++ b/RaspiSoftware/WebApp/templates/serialMonitor.jinja2
@@ -39,26 +39,14 @@
     <h2>Incoming</h2>
     <!-- {{ incoming }} -->
     <div  id="incoming"> </div>
+    <table class = "table" id="sqlTable">
+    </table>
+    
 
 </div>
 
-<table class = "table" id="statusTable">
-    <tr>
-      <td>Id</td>
-      <td>Data</td>
-    </tr>
-</table>
 
-<table class = "table" id="sqlTable">
-</table>
-<!-- <div id="sql_emit_tester"></div>
-<script>
-socket.on('update table', function(){
-    console.log('received update table in serialmonitor.jinja!');
-});
-</script> -->
-
-<script type="text/javascript" src="{{url_for('static', filename='javascript/socket.js')}}"></script>
+<script type="text/javascript" src="{{url_for('static', filename='javascript/controls.js')}}"></script>
 <script type="text/javascript" src="{{url_for('static', filename='javascript/visualization.js')}}"></script>
 
 {% endblock %}
