--- a/RaspiSoftware/WebApp/templates/serialMonitor.jinja2
+++ b/RaspiSoftware/WebApp/templates/serialMonitor.jinja2
@@ -8,12 +8,10 @@
     <h1>Motor Control</h1>
     <input onclick="toggle_motor()" type="button" value="Enable Motor" id="motorStatus"></input>
 
-    <input onclick="toggle_power()" type="button" value="Power Disabled" id="powerStatus"></input>
-    <input onclick="toggle_speed()" type="button" value="Speed Disabled" id="speedStatus"></input>
-    <input onclick="toggle_position()" type="button" value="Position Enabled" id="positionStatus"></input>
 
     <!-- Create power slider -->
     <div >
+        <input onclick="toggle_power()" type="button" value="Power Disabled" id="powerStatus"></input>
         <p>Power Value: <span id="displayPower" onload="update_power_slider()"></span></p>
         <input type="range" min="-1" max="1" value="0" step="0.1" class="slider" id="motorPower" oninput="update_power_slider()" onchange="send_motor_power()">
     </div>
@@ -28,12 +26,14 @@
     
 
     <div class="encoder_slider_container">
+        <input onclick="toggle_speed()" type="button" value="Speed Disabled" id="speedStatus"></input>
         <p>Encoder Speed: <span id="displaySpeed" onload="update_speed_slider()"></span></p>
         <input type="range" min="-3" max="3" value="0" step="0.1" class="slider" id="encoderSpeed" oninput="update_speed_slider()" onchange="send_encoder_speed()">
     </div>
 
     <div >
-        <p>Position Location</p>
+        <input onclick="toggle_position()" type="button" value="Position Enabled" id="positionStatus"></input>
+        <p>Position Location:</p>
         <form method="POST" action="/">
             {{ form_target.csrf_token }}
             <div>{{ form_target.json.label }} {{ form_target.json(size=20) }}</div>
@@ -42,6 +42,30 @@
     </div>
     
 </div>
+
+<div id="upload" class="uploadbox" align="center">
+  <br>
+  <p class="semibold" style="top:200px">Select a file to upload:</p>
+  <form method="post" action="/" enctype="multipart/form-data">
+      <br>
+      <dl>
+  		<p>
+  			<input id="file" type="file" class="inputfile" name="file" autocomplete="off" required/>
+        <label for="file" class="semibold">Browse Files</label>
+      </p>
+      </dl>
+      <p>
+  		  <input type="submit" class="button semibold blue1" value="Deploy Robot">
+  	  </p>
+      <br>
+  </form>
+</div>
+
+<!-- <div>
+    <label for="deployment">Choose a deployment file:</label>
+    <input type="file" id="deployment_file" name="deployment" accept="text/plain">
+    <input onclick="deploy_robot()" type="button" value="Deploy Robot" id="deplot_robot"></input>
+</div> -->
 
 <!-- Refresh page button -->
 <button onclick="window.location.href='/';">
