Attempting to wait for goto command

--- a/RaspiSoftware/WebApp/templates/serialMonitor.jinja2
+++ b/RaspiSoftware/WebApp/templates/serialMonitor.jinja2
@@ -50,7 +50,7 @@
       <br>
       <dl>
   		<p>
-  			<input id="file" type="file" class="inputfile" name="file" autocomplete="off" required/>
+  			<input id="file" type="file" class="inputfile" name="file" autocomplete="off" accept="text/plain" required/>
         <label for="file" class="semibold">Browse Files</label>
       </p>
       </dl>
