prevent page from reloading when uploading document

--- a/RaspiSoftware/WebApp/templates/serialMonitor.jinja2
+++ b/RaspiSoftware/WebApp/templates/serialMonitor.jinja2
@@ -55,7 +55,7 @@
         </p>
         </dl>
         <p>
-            <input type="submit" class="button semibold blue1" value="Deploy Robot">
+            <input type="submit" id="uploadFileButton" class="button semibold blue1" value="Deploy Robot">
         </p>
         <br>
     </form>
