--- a/RaspiSoftware/WebApp/templates/serialMonitor.jinja2
+++ b/RaspiSoftware/WebApp/templates/serialMonitor.jinja2
@@ -1,105 +1,120 @@
 {% extends 'layout.jinja2' %}
 
 {% block content %}
+<!-- <h1>Motor Control</h1>
+<input onclick="toggle_motor()" type="button" value="Enable Motor" id="motorStatus"></input> -->
 
-<!-- Motor Control Interface -->
-<div id="motorControl">
-    <!-- Create button -->
-    <h1>Motor Control</h1>
-    <input onclick="toggle_motor()" type="button" value="Enable Motor" id="motorStatus"></input>
+<div class="container">
 
-
-    <!-- Create power slider -->
-    <div >
-        <input onclick="toggle_power()" type="button" value="Power Disabled" id="powerStatus"></input>
-        <p>Power Value: <span id="displayPower" onload="update_power_slider()"></span></p>
-        <input type="range" min="-1" max="1" value="0" step="0.1" class="slider" id="motorPower" oninput="update_power_slider()" onchange="send_motor_power()">
+    <div class="page-header" style="text-align:center;  padding: 30px;">  
+    <!-- background-color: #ABBAEA; -->
+        <h1>Cablebot Dashboard</h1>
+    </div>
+    <div class="text-center" style="padding: 10px;">
+        <input onclick="toggle_motor()" class="btn btn-warning btn-lg" type="button" value="Enable Motor" id="motorStatus"></input>
     </div>
 
-    <!-- Create encoder position text box
-    <div class="encoder_pos_containter">
-        <input type="text" id="fname" name="fname"><br><br>
+    <div class="row">
+        <!-- Power Control -->
+        <div class='col' align='center' >
+            <input class="btn btn-secondary" onclick="toggle_power()" type="button" value="Power Disabled" id="powerStatus"></input>
+            <br><br>
+            <input type="range" min="-1" max="1" value="0" step="0.1" class="slider" id="motorPower" oninput="update_power_slider()" onchange="send_motor_power()">
+            <p>Power Value: <span id="displayPower" onload="update_power_slider()"></span></p>
+        </div>
+        <!-- Speed Control -->
+        <div class='col' align='center'>
+            <input class="btn btn-secondary" onclick="toggle_speed()" type="button" value="Speed Disabled" id="speedStatus"></input>
+            <br><br>
+            <input type="range" min="-3" max="3" value="0" step="0.1" class="slider" id="encoderSpeed" oninput="update_speed_slider()" onchange="send_encoder_speed()">    
+            <p>Encoder Speed: <span id="displaySpeed" onload="update_speed_slider()"></span></p>
+        </div>
+        <!-- Position Control -->
+        <div class='col' align='center' >
+            <input class="btn btn-secondary" onclick="toggle_position()" type="button" value="Position Enabled" id="positionStatus"></input>
+            <br><br>
+            <form class="form-inline">
+                <div class="form-group mb-2">
+                    <label for="encoderPosition" class="sr-only">Password</label>
+                    <input type="text" class="form-control" id="encoderPosition" placeholder="Position (m)">
+                </div>
+                <button onclick="send_encoder_position()" type="button" class="btn btn-primary mb-2">Submit</button>
+                <!-- <button type="submit" class="btn btn-primary mb-2">Confirm identity</button> -->
+            </form>
+            
+            <!-- Create encoder position text box
+            <div class="encoder_pos_containter">
+                <input type="text" id="fname" name="fname"><br><br>
+            </div>
+                <label for="fname">Position value:</label>
+                <input type="submit" value="Submit"> -->
+            <!-- Create encoder speed slider -->
+
+        </div>
+
     </div>
-        <label for="fname">Position value:</label>
-        <input type="submit" value="Submit"> -->
-    <!-- Create encoder speed slider -->
+    <!-- Upload File -->
+    <div class=row>
+        <div class="col-sm-6">
+            <div id='upload' class="card bg-secondary text-white h-100" text-white align='center' >
+                <div class='card-body'>
+                    <h5 class="card-title">Upload Deployment Routine</h5>
+                    <form method="post" action="/" enctype="multipart/form-data">
+                        <input id="file" type="file" class="inputfile" name="file" autocomplete="off" accept="text/plain" required/>
+                        <input type="submit" id="uploadFileButton" class="btn btn-warning" value="Deploy Robot">
+                    </form>
+                    
+                    <!-- Progress Bar -->
+                    <label for="deploymentProgress">Deployment progress:</label>
+                    <div id='deploymentProgress' class="progress" style="height: 20px;">
+                        <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
     
+        <!-- Progress Bar -->
+        <!-- <label for="deploymentProgress">Deployment progress:</label>
+        <div id='deploymentProgress' class="progress" style="height: 20px;">
+            <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+        </div> -->
+        <div class="col-sm-6">
+            <div class="card bg-secondary text-white h-100" align='center'>
+                <div class='card-body'>
+                <h5 class="card-title">Send Serial Command</h5>
 
-    <div class="encoder_slider_container">
-        <input onclick="toggle_speed()" type="button" value="Speed Disabled" id="speedStatus"></input>
-        <p>Encoder Speed: <span id="displaySpeed" onload="update_speed_slider()"></span></p>
-        <input type="range" min="-3" max="3" value="0" step="0.1" class="slider" id="encoderSpeed" oninput="update_speed_slider()" onchange="send_encoder_speed()">
-    </div>
+                    <form method="POST" action="/">
+                        {{ form_long.csrf_token }}
+                        <div>{{ form_long.json(size=20) }}</div>
+                        {{ form_long.submit }}
+                    </form>
+                </div>
+            </div>
+        </div>
 
-    <div >
-        <input onclick="toggle_position()" type="button" value="Position Enabled" id="positionStatus"></input>
-        <p>Position Location:</p>
-        <form method="POST" action="/">
-            {{ form_target.csrf_token }}
-            <div>{{ form_target.json.label }} {{ form_target.json(size=20) }}</div>
-            {{ form_target.submit }}
-        </form>
-    </div>
     
-</div>
+    </div>
 
-<div id="upload" class="uploadbox" align="center">
+    <!-- Feedback -->
+    <!-- <div id="outgoing">
+        <h5>Outgoing</h5>
+        {{ outgoing }}
+    </div> -->
+
     <br>
-    <p class="semibold" style="top:200px">Select a file to upload:</p>
-    <form method="post" action="/" enctype="multipart/form-data">
-        <br>
-        <dl>
-        <p>
-            <input id="file" type="file" class="inputfile" name="file" autocomplete="off" accept="text/plain" required/>
-        <label for="file" class="semibold">Browse Files</label>
-        </p>
-        </dl>
-        <p>
-            <input type="submit" id="uploadFileButton" class="button semibold blue1" value="Deploy Robot">
-        </p>
-        <br>
-    </form>
-    <!-- Progress Bar -->
-    <label for="deploymentProgress">Deployment progress:</label>
-    <progress id="deploymentProgress" value="0" max="100"> </progress>
+    <div class='row' id="incoming">
+        <h5>Incoming</h5>
+        <table class = "table" id="sqlTable">
+        </table>    
+    </div>
 
 </div>
 
-<!-- <div>
-    <label for="deployment">Choose a deployment file:</label>
-    <input type="file" id="deployment_file" name="deployment" accept="text/plain">
-    <input onclick="deploy_robot()" type="button" value="Deploy Robot" id="deplot_robot"></input>
-</div> -->
 
 <!-- Refresh page button -->
-<button onclick="window.location.href='/';">
+<!-- <button onclick="window.location.href='/';">
     Refresh
-</button>
-
-<!-- Serial Send (Line by Line) -->
-<div>
-    <h2>Serial Send</h2>
-    <form method="POST" action="/">
-        {{ form_long.csrf_token }}
-        <div>{{ form_long.json.label }} {{ form_long.json(size=20) }}</div>
-        {{ form_long.submit }}
-    </form>
-</div>
-
-<!-- Incoming/Outgoing Display -->
-<div id="outgoing">
-    <h2>Outgoing</h2>
-    {{ outgoing }}
-</div>
-<div>
-    <h2>Incoming</h2>
-    <!-- {{ incoming }} -->
-    <div  id="incoming"> </div>
-    <table class = "table" id="sqlTable">
-    </table>
-    
-
-</div>
+</button> -->
 
 
 <script type="text/javascript" src="{{url_for('static', filename='javascript/controls.js')}}"></script>
