--- a/RaspiSoftware/WebApp/templates/layout.jinja2
+++ b/RaspiSoftware/WebApp/templates/layout.jinja2
@@ -28,7 +28,7 @@
         .slider {
           -webkit-appearance: none;
           width: 100%;
-          height: 25px;
+          height: 30px;
           background: #d3d3d3;
           outline: none;
           opacity: 0.7;
@@ -43,16 +43,18 @@
         .slider::-webkit-slider-thumb {
           -webkit-appearance: none;
           appearance: none;
-          width: 25px;
-          height: 25px;
-          background: #4CAF50;
+          width: 30px;
+          height: 30px;
+          /* background: #4CAF50; */
+          background: #5cb85c;
           cursor: pointer;
         }
         
         .slider::-moz-range-thumb {
-          width: 25px;
-          height: 25px;
-          background: #4CAF50;
+          width: 30px;
+          height: 30px;
+          /* background: #4CAF50; */
+          background: #5cb85c;
           cursor: pointer;
         }
     </style>
