Incorporated socketio and jquery into the offline webapp. Still no styling and tables that work

--- a/RaspiSoftware/WebApp/templates/serialMonitor.jinja2
+++ b/RaspiSoftware/WebApp/templates/serialMonitor.jinja2
@@ -138,8 +138,8 @@
 <!-- <button onclick="window.location.href='/';">
     Refresh
 </button> -->
-
-
+<script type="text/javascript" src="{{url_for('static', filename='javascript/jquery.min.js')}}"></script>
+<script type="text/javascript" src="{{url_for('static', filename='javascript/socket.io.js')}}"></script>
 <script type="text/javascript" src="{{url_for('static', filename='javascript/controls.js')}}"></script>
 <script type="text/javascript" src="{{url_for('static', filename='javascript/visualization.js')}}"></script>
 
