added in Bootstrap, it seemed to work, but still not sure if its cached

--- a/RaspiSoftware/WebApp/templates/serialMonitor.jinja2
+++ b/RaspiSoftware/WebApp/templates/serialMonitor.jinja2
@@ -138,7 +138,10 @@
 <!-- <button onclick="window.location.href='/';">
     Refresh
 </button> -->
+<!-- <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/bootstrap.min.css')}}" /> -->
+
 <script type="text/javascript" src="{{url_for('static', filename='javascript/jquery.min.js')}}"></script>
+<script type="text/javascript" src="{{url_for('static', filename='javascript/bootstrap.bundle.min.js')}}"></script>
 <script type="text/javascript" src="{{url_for('static', filename='javascript/socket.io.js')}}"></script>
 <script type="text/javascript" src="{{url_for('static', filename='javascript/controls.js')}}"></script>
 <script type="text/javascript" src="{{url_for('static', filename='javascript/visualization.js')}}"></script>
