Fixed table spamming issue. Sensors from the Aquatroll now show up in the table

--- a/RaspiSoftware/WebApp/templates/serialMonitor.jinja2
+++ b/RaspiSoftware/WebApp/templates/serialMonitor.jinja2
@@ -127,20 +127,7 @@
                 </div>
             </div>    
         </div>
-    </div>
-
-    <!-- <div class='row' id="incoming" style='padding:10px;'>
-        <div class='col'>
-            <div class="card" text-white align='center' style='padding:10px;'>
-                <h5 class="card-header">Status Monitor</h5>
-                <div class='card-body' >
-                    <table class = "table" id="sqlTable">
-                    </table>
-                </div>
-            </div>    
-        </div>
-    </div> -->
-    
+    </div>    
 
     <!-- Feedback -->
     <!-- <div id="outgoing">
@@ -158,14 +145,11 @@
 <!-- <button onclick="window.location.href='/';">
     Refresh
 </button> -->
-<!-- <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/bootstrap.min.css')}}" /> -->
 
-<script type="text/javascript" src="{{url_for('static', filename='javascript/jquery.min.js')}}"></script>
+<!-- <script type="text/javascript" src="{{url_for('static', filename='javascript/jquery.min.js')}}"></script>
 <script type="text/javascript" src="{{url_for('static', filename='javascript/bootstrap.bundle.min.js')}}"></script>
 <script type="text/javascript" src="{{url_for('static', filename='javascript/socket.io.js')}}"></script>
-
-<!-- <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/datatables.css')}}"/> -->
-<script type="text/javascript" src="{{url_for('static', filename='javascript/datatables.js')}}"></script>
+<script type="text/javascript" src="{{url_for('static', filename='javascript/datatables.js')}}"></script> -->
 
 
 <script type="text/javascript" src="{{url_for('static', filename='javascript/controls.js')}}"></script>
