--- a/RaspiSoftware/WebApp/templates/layout.jinja2
+++ b/RaspiSoftware/WebApp/templates/layout.jinja2
@@ -9,15 +9,12 @@
         <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/bootstrap.css')}}" />
         <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/datatables.css')}}"/>
 
-        <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous"> -->
-
-        <!-- [JavaScript] jQuery, Popper, Bootstrap, Websockets, and Google Charts -->
-        <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
-        <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script> -->
-        <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script> -->
-        <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js" integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I=" crossorigin="anonymous"></script> -->
-        <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-
+        <!-- [JavaScript] jQuery, Bootstrap, SocketIO, and Datatables -->       
+        <script type="text/javascript" src="{{url_for('static', filename='javascript/jquery.min.js')}}"></script>
+        <script type="text/javascript" src="{{url_for('static', filename='javascript/bootstrap.bundle.min.js')}}"></script>
+        <script type="text/javascript" src="{{url_for('static', filename='javascript/socket.io.js')}}"></script>
+        <script type="text/javascript" src="{{url_for('static', filename='javascript/datatables.js')}}"></script>
+        
         <!-- Link to Relevant Styles -->
         {% block styles %}{% endblock %}
 
