Implemented two separate data monitors, one for robot health, one for aquaTROLL data.

--- a/RaspiSoftware/WebApp/templates/serialMonitor.jinja2
+++ b/RaspiSoftware/WebApp/templates/serialMonitor.jinja2
@@ -114,10 +114,10 @@
             <div class="card" text-white align='center' style='padding:10px;'>
                 <h5 class="card-header">Status Monitor</h5>
                 <div class='card-body' >
-                    <table class = "table" id="sqlTable" style="width:100%">
+                    <table class = "table" id="robotLogsTable" style="width:100%">
                         <thead>
                             <tr>
-                                <th>Sensor Nanme</th>
+                                <th>Sensor Name</th>
                                 <th>Value</th>
                                 <th>Time Stamp</th>
                             </tr>
@@ -126,6 +126,23 @@
                     
                 </div>
             </div>    
+        </div>
+        <div class='col'>
+            <div class="card" text-white align='center' style='padding:10px;'>
+                <h5 class="card-header">Aqua TROLL Data</h5>
+                <div class='card-body' >
+                    <table class = "table" id="aquatrollDataTable" style="width:100%">
+                        <thead>
+                            <tr>
+                                <th>Sensor Name</th>
+                                <th>Value</th>
+                                <th>Time Stamp</th>
+                            </tr>
+                        </thead>
+                    </table>
+                    
+                </div>
+            </div>
         </div>
     </div>    
 
